views: fix content setting bubble width

This change:
1) Allows the text labels on checkboxes and radiobuttons to line-wrap
   instead of truncating;
2) Forces the content setting bubbles to the smallest width in Harmony
   mode.

Bug: 787755
Change-Id: I7c823bc7e0c504935cbd210893001c1ff8c060ec